Fix centering on wrapping in magic

--- a/public/style.css
+++ b/public/style.css
@@ -106,3 +106,7 @@ a.link {
     position: absolute;
     z-index: 2;
 }
+
+.centerWrap > div.wrp {
+    justify-content: center !important;
+}
